--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
+.idea/*
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
@@ -71,3 +72,5 @@ Grocerie\ Dataset/*
 Online\ Retail/*
 test\ transactional\ data/*
 test_matlab/*
+
+.dropbox
